[project]
name = "job_search"
version = "0.1.0"
description = "Backend for job-search Firefox extension"
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
